--- a/style.css
+++ b/style.css
@@ -18,12 +18,12 @@ h1 {
 #search-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center; 
     margin-bottom: 20px;
 }
 
 #search-input-container, #search-button-container {
-    margin: 10px 0;
+    margin: 10px 0; 
 }
 
 #pokemonName {
@@ -40,6 +40,7 @@ h1 {
 }
 
 #searchButton {
+    font-family: 'Press Start 2P', sans-serif;
     background-color: #ff4500;
     color: white;
     border: none;
@@ -99,6 +100,8 @@ h1 {
     margin-top: 20px;
 }
 
+ /**/
+
  .modal-container {
     display: none;
     position: fixed;
@@ -114,7 +117,7 @@ h1 {
 
 .modal-content {
     background-color: #FFCB05; 
-    border: 2px solid #ff4500;
+    border: 2px solid #ff4500; 
     border-radius: 15px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     padding: 20px;
@@ -123,21 +126,22 @@ h1 {
     margin: auto; 
 }
 
+
 .modal-content h2 {
     font-size: 1.8rem;
     font-weight: bold;
-    color: #333;
+    color: #333; 
     margin-bottom: 15px;
 }
 
 .modal-content img {
     max-width: 250px;
     height: auto;
-    margin: 15px auto;
+    margin: 15px auto; 
 }
 
 .modal-content p {
     font-size: 1.2rem;
-    color: #555;
+    color: #555; 
     margin-bottom: 12px;
 }
